--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\rrula\AppData\Local\Temp\testng-eclipse--622598747\testng-customsuite.xml</span>
+                    <span>C:\Users\rrula\AppData\Local\Temp\testng-eclipse-198156361\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="cucumber.TestNGTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Positive test of submitting the order&quot;, &quot;Purchase the order from Ecommerce Website&quot;)">runScenario("Positive test of submitting the order", "Purchase the order from Ecommerce Website")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="raulruiz.tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL})">submitOrder({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="raulruiz.tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3})">submitOrder({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,17 +126,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">cucumber.TestNGTestRunner</span>
+              <span class="class-name">raulruiz.tests.SubmitOrderTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;Positive test of submitting the order&quot;, &quot;Purchase the order from Ecommerce Website&quot;)">
-                  </a> <!-- runScenario("Positive test of submitting the order", "Purchase the order from Ecommerce Website") -->
-                  <span class="method-name">runScenario</span>
-                  <span class="parameters">("Positive test of submitting the order","Purchase the order from Ecommerce Website")</span>
-                  <em>
-(Runs Cucumber Scenarios)                  </em>
+                  <a name="submitOrder({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL})">
+                  </a> <!-- submitOrder({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL}) -->
+                  <span class="method-name">submitOrder</span>
+                  <span class="parameters">({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="submitOrder({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3})">
+                  </a> <!-- submitOrder({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3}) -->
+                  <span class="method-name">submitOrder</span>
+                  <span class="parameters">({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -139,7 +150,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rrula\AppData\Local\Temp\testng-eclipse--622598747\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rrula\AppData\Local\Temp\testng-eclipse-198156361\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +159,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;cucumber.TestNGTestRunner&quot;/&gt;
+      &lt;class name=&quot;raulruiz.tests.SubmitOrderTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -173,10 +184,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">cucumber</span>
+              <span class="test-group-name">Purchase</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">runScenario</span>
+                <span class="method-in-group-name">submitOrder</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -196,16 +207,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'runScenario')
-data.setCell(0, 2, 'cucumber.TestNGTestRunner')
-data.setCell(0, 3, 15947);
+data.setCell(0, 1, 'submitOrder')
+data.setCell(0, 2, 'raulruiz.tests.SubmitOrderTest')
+data.setCell(0, 3, 4499);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'submitOrder')
+data.setCell(1, 2, 'raulruiz.tests.SubmitOrderTest')
+data.setCell(1, 3, 4431);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,19 +246,31 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">cucumber.TestNGTestRunner</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@3c74aa0d)</span>
+              <div class="chronological-class-name">raulruiz.tests.SubmitOrderTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">launchApplication</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">runScenario("Positive test of submitting the order", "Purchase the order from Ecommerce Website")</span>
-                <span class="method-start">674 ms</span>
+                <span class="method-name">submitOrder({email=rrulas10@hotmail.com, password=Hqtzgl03521810, product=ZARA COAT 3})</span>
+                <span class="method-start">10648 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDownClass</span>
-                <span class="method-start">16629 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">15082 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchApplication</span>
+                <span class="method-start">15260 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">submitOrder({email=baloo@xyz.com, password=Hqtzgl03521810, product=ADIDAS ORIGINAL})</span>
+                <span class="method-start">29355 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">33855 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
